--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,3 +22,5 @@ jobs:
           bundler-cache: true
       - name: Run rubocop linting
         run: bundle exec rubocop -P
+      - run: bundle exec erblint app/**/*.erb
+        name: Lint ERB files
